--- a/src/moment1.html
+++ b/src/moment1.html
@@ -22,6 +22,7 @@
     
     <div class="wrapper">
         <h1>Moment 2 - Versionshantering & Git</h1>
+        <img src="img/checkmark.png" alt="Uppgift slutförd!" class="check">
 
         <section id="purpose">
             <h2>Syfte</h2>
@@ -92,7 +93,7 @@
         </section>
 
         <div class="images">
-            <img src="img/cat1.png">
+            <img src="img/cat1.png" alt="">
         </div>
     </div>
 
