--- a/src/moment2.html
+++ b/src/moment2.html
@@ -22,6 +22,7 @@
     
     <div class="wrapper">
         <h1>Moment 2 - NodeJs & Gulp</h1>
+        <img src="img/checkmark.png" alt="Uppgift slutförd!" class="check">
 
         <section id="purpose">
             <h2>Syfte</h2>
